SEO optimasation of pages

--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Contact us at croissant.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
 
-    <title>Contact</title>
+    <title>Get in contact | croissant.com</title>
   </head>
   <body>
     <h1>🥐Contact the Croissant🥐</h1>
@@ -13,10 +14,15 @@
     <p id="e-m">
       e-Mail us at <span><strong>me@croissant.com</strong></span> for more info
     </p>
+
     <div class="row">
-      <div class="col-4"><a href="/">Homepage</a></div>
-      <div class="col-4"><a href="/photo.html">Photo</a></div>
-      <div class="col-4"><a href="/contact.html">Contact</a></div>
+      <div class="col-4"><a href="/" title="Origin">Croissant's Origin</a></div>
+      <div class="col-4">
+        <a href="/photo.html" title="Example">Croissant Example</a>
+      </div>
+      <div class="col-4">
+        <a href="/contact.html" title="Contact">Contact croissant.com </a>
+      </div>
     </div>
   </body>
 </html>
