--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="The origin of the famous croissant" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <title>Homepage</title>
+    <title>The Croissant, Origin | croissant.com</title>
   </head>
   <body>
     <h1>🥐 The origin of the Croissant 🥐</h1>
@@ -18,9 +19,13 @@
       results in a layered, flaky texture, similar to a puff pastry.
     </p>
     <div class="row">
-      <div class="col-4"><a href="/">Homepage</a></div>
-      <div class="col-4"><a href="/photo.html">Photo </a></div>
-      <div class="col-4"><a href="/contact.html">Contact</a></div>
+      <div class="col-4"><a href="/" title="Origin">Croissant's Origin</a></div>
+      <div class="col-4">
+        <a href="/photo.html" title="Example">Croissant Example</a>
+      </div>
+      <div class="col-4">
+        <a href="/contact.html" title="Contact">Contact croissant.com </a>
+      </div>
     </div>
   </body>
 </html>
