--- a/photo.html
+++ b/photo.html
@@ -2,18 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="An example of the famous croissant" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
 
-    <title>Photo</title>
+    <title>The Croissant, Picture | croissant.com</title>
   </head>
   <body>
     <h1>🥐A Picture of the Croissant🥐</h1>
-    <div><img src="/images/croissant.jpeg" alt="" / id="photo"></div>
+    <div><img src="/images/croissant.jpeg" alt="croissant" / id="photo"></div>
+
     <div class="row">
-      <div class="col-4"><a href="/">Homepage</a></div>
-      <div class="col-4"><a href="/photo.html">Photo </a></div>
-      <div class="col-4"><a href="/contact.html">Contact</a></div>
+      <div class="col-4"><a href="/" title="Origin">Croissant's Origin</a></div>
+      <div class="col-4">
+        <a href="/photo.html" title="Example">Croissant Example</a>
+      </div>
+      <div class="col-4">
+        <a href="/contact.html" title="Contact">Contact croissant.com </a>
+      </div>
     </div>
   </body>
 </html>
