Description (SEO) update

--- a/photo.html
+++ b/photo.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="An example of the famous croissant" />
+    <meta
+      name="description"
+      content="An example of the famous croissant made by us for you to enjoy"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
 
